--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     network_mode: "host"
     volumes:
       - ./output:/usr/src/app/output
+      - ./debug:/usr/src/app/debug
     environment:
       - PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium
       - EXPORT_SERVER_PORT=${EXPORT_SERVER_PORT:-3001}
