--- a/.env.template
+++ b/.env.template
@@ -4,6 +4,7 @@ GRAFANA_SERVICE_ACCOUNT=false
 EXPORT_SERVER_PORT=3001
 FORCE_KIOSK_MODE=true
 EXTRACT_DATE_AND_DASHBOARD_NAME_FROM_HTML_PANEL_ELEMENTS=false
+ADD_RANDOM_STRING_TO_FILE_NAME=false
 NAVIGATION_TIMEOUT=120000
 DEBUG_MODE=false
 HIDE_DASHBOARD_CONTROLS=true
