Fix Chromium temp paths to avoid crash
https://github.com/hardkoded/puppeteer-sharp/issues/2633#issuecomment-2107557005

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,5 @@ services:
     environment:
       - PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium
       - EXPORT_SERVER_PORT=${EXPORT_SERVER_PORT:-3001}
+      - XDG_CONFIG_HOME=/tmp/.chromium
+      - XDG_CACHE_HOME=/tmp/.chromium
